--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<pd-navbar></pd-navbar>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -15,6 +16,9 @@
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+  </li>
+  <li>
+    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Testin</a></h2>
   </li>
 </ul>
 
