--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -3,8 +3,15 @@
 
         <!-- BEGIN PAGE CONTENT INNER -->
         <div class="page-content-inner" *ngFor="let user of users">
-            
-            
+            <div class="card ml-2 mr-2 mt-2 mb-2" style="width: 18rem; float: left;">
+                <div class="card-body">
+                  <h5 class="card-title"> {{ user.a02_nome }} </h5>
+                  <h6 class="card-subtitle mb-2 text-muted"> {{ user.a02_competencia }} </h6>
+                  <p class="card-text"> Cras interdum varius finibus. Sed et tempus sem. Duis sit amet vehicula ipsum, vitae condimentum libero. Quisque ut justo imperdiet nulla tristique imperdiet. Fusce ac orci a nibh semper bibendum. </p>
+                  <a href="#" class="card-link">Editar</a>
+                  <a href="#" class="card-link"> Sei lá brow </a>
+                </div>
+              </div>
         </div>
 
     </div>
