--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<pd-navbar></pd-navbar>
-<div class="container">
-    <div class="alert alert-danger mt-2" role="alert">
-      Essa aplicação ainda está sendo construída pela equipe ParaDecision
-    </div>
-  <div style="text-align:center">
-    <h1>
-      Welcome to {{ title }}!
-    </h1>
-  </div>
-</div>
-<pd-proposition></pd-proposition>
-
+<router-outlet></router-outlet>
