--- a/src/app/home/signin/signin.component.css
+++ b/src/app/home/signin/signin.component.css
@@ -1,7 +1,9 @@
-.body {
-    /*background: url(../imagens/robo.PNG) no-repeat,*/
-    background: rgba(214, 255, 255,0.6);
+body {
+    background: url(images/robo.PNG) no-repeat,
+    rgba(183, 225, 225, 0.6);
     color: #555;
+    height: 100%;
+
   }
   
   legend {
@@ -9,12 +11,12 @@
     border-radius: 10px;
     padding-top: 60px;
     text-align: center;
-    color: rgb(240, 230, 230);
+    color: rgb(25, 10, 10);
     font-weight: 500;
   }
   
   .loginbox{
-    background: rgba(2, 112, 112, 0.8);
+    background: rgba(32, 132, 132, 0.4);
     border-radius: 3px 15px;
     padding: 10px;
     padding-top: 0px;
