--- a/src/app/home/signin/signin.component.css
+++ b/src/app/home/signin/signin.component.css
@@ -3,6 +3,10 @@ body {
     rgba(183, 225, 225, 0.6);
     color: #555;
     height: 100%;
+      position: absolute;
+      min-height: 100% !important;
+      min-width: 100% !important;
+      
 
   }
   
