--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mr-auto mt-12 mt-lg-12">
           <li class="nav-item active">
-            <a class="nav-link" href="proposicao.html">
+            <a class="nav-link" [href]="hrefPropositionFromUser">
               Proposição<span class="sr-only"> (atual)</span>
             </a>
           </li>
