--- a/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
+++ b/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
@@ -29,7 +29,7 @@
           
           <td><input #newDate type="date" name="newDate" id="newDate" formControlName="newDate"></td>
           <td><input #newCollection type="text" name="newCollection" id="newCollection" formControlName="newCollection"></td>
-          <td><button [disabled]="newPropositionForm.invalid" class="btn" type="submit"> <h3>+</h3> </button></td>
+          <td><button [disabled]="newPropositionForm.invalid" class="btn btn-light" type="submit"> <h3>+</h3> </button></td>
 
        
 
