--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" >Desconectar</a>
+            <a class="nav-link" (click)="disconnect()" >Desconectar</a>
           </li>
         </ul>
 
