Servico de Organizacao

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Avaliar</a>
+            <a class="nav-link" [href]="hrefPropositionWorkspace">Workspace</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Analisar</a>
