--- a/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
+++ b/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
@@ -18,23 +18,21 @@
       <td>{{ proposition.collection }}</td>
       <td><button (click)="selectProposition(proposition.id)"> <h3>></h3> </button></td>
     </tr>
-
-    <form [formGroup]="newPropositionForm" (submit)="newProposition()"> 
     <tr>
-       
+ 
           <td style="display:none;"></td>
-          <td><input #newDescription type="text" name="newDescription" id="newDescription" formControlName="newDescription" ></td>
+          <td><input type="text" name="newDescription" id="newDescription" [value]="newDescription"></td>
           
-          <td><input #newSummary type="text" name="newSummary" id="newSummary" formControlName="newSummary"></td>
+          <td><input type="text" name="newSummary" id="newSummary" [value]="newSummary"></td>
           
-          <td><input #newDate type="date" name="newDate" id="newDate" formControlName="newDate"></td>
-          <td><input #newCollection type="text" name="newCollection" id="newCollection" formControlName="newCollection"></td>
-          <td><button [disabled]="newPropositionForm.invalid" class="btn btn-light" type="submit"> <h3>+</h3> </button></td>
-
-       
+          <td><input type="date" name="newDate" id="newDate" [value]="newDate"></td>
+          <td><input type="text" name="newCollection" id="newCollection" [value]="newCollection"></td>
+          <td><button class="btn btn-light" (click)="newProposition()"> <h3>+</h3> </button></td>
 
 
       </tr>
-    </form>
+    
+    
+   
   </table>
 </div>
