trabalhando com o workspace

--- a/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
+++ b/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
@@ -5,8 +5,8 @@
         <th style="display:none;">Proposition Id</th>
         <th>Description</th>
         <th>Summary</th>
-        <th>Date</th>
-        <th>Collection</th>
+        <th class="d-none d-lg-table-cell">Date</th>
+        <th class="d-none d-lg-table-cell">Collection</th>
         <th> &nbsp; </th>
       </tr>
     </thead>
@@ -14,9 +14,9 @@
       <td style="display:none;">{{ proposition.id }}</td>
       <td>{{ proposition.description }}</td>
       <td>{{ proposition.summary }}</td>
-      <td>{{ proposition.date | date: 'EEEE MMMM dd, yyyy' }}</td>
-      <td>{{ proposition.collection }}</td>
-      <td><button (click)="selectProposition(proposition.id)"> <h3>></h3> </button></td>
+      <td class="d-none d-lg-table-cell">{{ proposition.date | date: 'EEEE MMMM dd, yyyy' }}</td>
+      <td class="d-none d-lg-table-cell">{{ proposition.collection }}</td>
+      <td><button (click)="selectProposition(proposition.id)" class="btn btn-outline-dark rounded-circle pt-1 pb-0"> <h3> &nbsp;></h3> </button></td>
     </tr>
     <tr>
  
@@ -25,9 +25,9 @@
           
           <td><input type="text" name="newSummary" id="newSummary" [value]="newSummary"></td>
           
-          <td><input type="date" name="newDate" id="newDate" [value]="newDate"></td>
-          <td><input type="text" name="newCollection" id="newCollection" [value]="newCollection"></td>
-          <td><button class="btn btn-light" (click)="newProposition()"> <h3>+</h3> </button></td>
+          <td class="d-none d-lg-table-cell"><input type="date" name="newDate" id="newDate" [value]="newDate"></td>
+          <td class="d-none d-lg-table-cell"><input type="text" name="newCollection" id="newCollection" [value]="newCollection"></td>
+          <td><a (click)="newProposition()"> <h3>+</h3> </a></td>
 
 
       </tr>
