--- a/src/app/organization-environment/organizations/organization-list/organization-list.component.html
+++ b/src/app/organization-environment/organizations/organization-list/organization-list.component.html
@@ -1,28 +1,28 @@
 <div class="container">
   <table class="table">
     <thead>
-      <tr>
+      <tr class="row">
         <th style="display:none;">Organization Id</th>
-        <th>Description</th>
-        <th>Summary</th>
-        <th> &nbsp; </th>
+        <th class="col-5">Description</th>
+        <th class="col-5">Summary</th>
+        <th class="col-2"> &nbsp; </th>
       </tr>
     </thead>
-    <tr *ngFor="let organization of organizations">
+    <tr *ngFor="let organization of organizations" class="row">
       <td style="display:none;">{{ organization.id }}</td>
-      <td>{{ organization.description }}</td>
-      <td>{{ organization.summary }}</td>
+      <td class="col-5">{{ organization.description }}</td>
+      <td class="col-5">{{ organization.summary }}</td>
 
-      <td><button (click)="selectOrganization(organization.id)" class="btn btn-outline-dark rounded-circle pt-1 pb-0"> <h3> &nbsp;></h3> </button></td>
+      <td class="col-2"><button (click)="selectOrganization(organization.id)" class="btn btn-outline-dark rounded-circle pt-1 pb-0"> <h3> &nbsp;></h3> </button></td>
     </tr>
-    <tr>
+    <tr class="row">
  
           <td style="display:none;"></td>
-          <td><input type="text" name="newDescription" id="newDescription" [value]="newDescription"></td>
+          <td class="col-5"><input type="text" name="newDescription" id="newDescription" [value]="newDescription"></td>
           
-          <td><input type="text" name="newSummary" id="newSummary" [value]="newSummary"></td>
+          <td class="col-5"><input type="text" name="newSummary" id="newSummary" [value]="newSummary"></td>
 
-          <td><a (click)="newOrganization()"> <h3>&nbsp;+&nbsp;</h3> </a></td>
+          <td class="col-2"><a (click)="newOrganization()"> <h3>&nbsp;+&nbsp;</h3> </a></td>
 
 
       </tr>
