graus de evidencia com indicador

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,14 +15,14 @@
         <ul class="navbar-nav mr-auto mt-12 mt-lg-12">
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['propositions/fromUser/', username]">
-              Proposition<span class="sr-only"> (atual)</span>
+              Problema<span class="sr-only"> (atual)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['dashboard']">Workspace</a>
+            <a class="nav-link" [routerLink]="['dashboard']">Ambiente</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['evidences/fromUser/', username]">Evaluate</a>
+            <a class="nav-link" [routerLink]="['evidences/fromUser/', username]">Avaliar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Analisar</a>
