--- a/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
+++ b/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
@@ -3,10 +3,10 @@
     <thead>
       <tr class="row">
         <th style="display:none;" class="col-0">Proposition Id</th>
-        <th class="col-5 col-md-3">Description</th>
-        <th class="col-5 col-md-3">Summary</th>
-        <th class="d-none d-lg-table-cell col-0 col-md-2">Date</th>
-        <th class="d-none d-lg-table-cell col-0 col-md-2">Collection</th>
+        <th class="col-5 col-md-3">Descrição</th>
+        <th class="col-5 col-md-3">Resumo</th>
+        <th class="d-none d-lg-table-cell col-0 col-md-2">Data</th>
+        <th class="d-none d-lg-table-cell col-0 col-md-2">Coleção</th>
         <th class="col-2"> &nbsp; </th>
       </tr>
     </thead>
@@ -14,7 +14,7 @@
       <td style="display:none;" class="col-0">{{ proposition.id }}</td>
       <td class="col-5 col-md-3">{{ proposition.description }}</td>
       <td class="col-5 col-md-3">{{ proposition.summary }}</td>
-      <td class="d-none d-lg-table-cell col-0 col-md-2">{{ proposition.date | date: 'EEEE MMMM dd, yyyy' }}</td>
+      <td class="d-none d-lg-table-cell col-0 col-md-2">{{ proposition.date | date: 'dd/MM/yyyy' }}</td>
       <td class="d-none d-lg-table-cell col-0 col-md-2">{{ proposition.collection }}</td>
       <td class="col-2"><button (click)="selectProposition(proposition.id)" class="btn btn-outline-dark rounded-circle pt-1 pb-0"> <h3> &nbsp;></h3> </button></td>
     </tr>
