--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <button class="btn btn-info mt-2 float-right">New Factor</button>
+    <button class="btn btn-info mt-2 float-right"> Novo Criterio </button>
     <br />
     <br />
     <br />
@@ -11,7 +11,7 @@
                 {{factor.description}}<br />
                 <span class="text-muted">{{factor.summary}}</span>
             </div>
-            <div class="col-6 col-md-2 mt-2"><a data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> New Section + </a> </div>
+            <div class="col-6 col-md-2 mt-2"><a data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </a> </div>
             <div class="col-6 col-md-1 mt-2"><button class="btn btn-info" data-toggle="collapse" attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0"> V </button></div>
             
         </div>
