--- a/src/app/expert-environment/expert.component.html
+++ b/src/app/expert-environment/expert.component.html
@@ -3,29 +3,50 @@
     <table class="table table-light table-striped">
         <thead class="thead-dark">
             <tr class="row">
-                <th scope="col" class="col-2">Tag</th>
-                <th scope="col" class="col-4 col-md-6">Factor</th>
+                <th scope="col" class="col-4 col-md-2">Sigla</th>
+                <th scope="col" class="col-8 col-md-4">Criterio</th>
                 <!-- <th scope="col" class="hidden-xs hidden-sm d-none d-lg-table-cell">Attractiveness</th>
                 <th scope="col" class="hidden-xs hidden-sm d-none d-lg-table-cell">Disharmony</th> -->
-                <th scope="col" class="col-3 col-md-2">Attractiveness</th>
-                <th scope="col" class="col-3 col-md-2">Disharmony</th>
+                <th scope="col" class="hidden-xs hidden-sm d-none d-lg-table-cell col-md-3">Confiança</th>
+                <th scope="col" class="hidden-xs hidden-sm d-none d-lg-table-cell col-md-3">Desconfiança</th>
             </tr>
         </thead>
 
         <tr *ngFor="let factor of factors" class="row">
-            <th scope="row" class="col-2">  {{factor.tag}} </th>
-            <td class="col-4 col-md-6"> {{factor.description}} </td>
+            <th scope="row" class="col-4 col-md-2">  {{factor.tag}} </th>
+            <td class="col-8 col-md-4"> {{factor.description}} </td>
             <!-- <td class="hidden-xs hidden-sm d-none d-lg-table-cell"> <input type="text"> </td>
-            <td class="hidden-xs hidden-sm d-none d-lg-table-cell"> <input type="text"> </td> -->
-            <td class="col-3 col-md-2">
-                <label for="customRange3"></label>
-                <input type="range" class="custom-range" min="0" max="10" step="0.05" id="customRange3">
-            </td>
-            <td class="col-3 col-md-2">
-                <label for="customRange3"></label>
-                <input type="range" class="custom-range" min="0" max="10" step="0.05" id="customRange3">
-            </td>
+            <td class="hidden-xs hidden-sm d-none d-lg-table-cell"> <input type="text"> </td>  -->
+            <td class="col-12 col-md-3">
+                    <pd-expert-value [valor]="gce"></pd-expert-value>
+                </td>
+                <td class="col-12 col-md-3">
+                    
+                        <pd-expert-value [valor]="gin"></pd-expert-value>
+                </td>
         </tr>
 
     </table>
+    <!-- <script>
+        var rangeSlider = function(){
+        var slider = $('.celula'),
+            range = $('.custom-range'),
+            value = $('.range-slider__value');
+            
+        slider.each(function(){
+
+            value.each(function(){
+            var value = $(this).prev().attr('value');
+            $(this).html(value);
+            });
+
+            range.on('input', function(){
+            $(this).next(value).html(this.value);
+            });
+        });
+        };
+
+        rangeSlider();
+    </script> -->
+    
 </div>
