--- a/src/app/analysis-environment/results/result/result.component.html
+++ b/src/app/analysis-environment/results/result/result.component.html
@@ -1,8 +1,1 @@
-<div class="circle__box">
-    <div class="circle__wrapper circle__wrapper--right">
-        <div class="circle__whole circle__right"></div>
-    </div>
-    <div class="circle__wrapper circle__wrapper--left">
-        <div class="circle__whole circle__left"></div>
-    </div>
-</div>
+<div id="results"></div>
