--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             <a class="nav-link" [routerLink]="['evidences/fromUser/', username]">Avaliar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Analisar</a>
+            <a class="nav-link" [routerLink]="['result']">Analisar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Relatório</a>
