--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -5,8 +5,8 @@
         <div class="page-content-inner">
             <div class="card ml-2 mr-2 mt-2 mb-2" style="width: 18rem; float: left;">
                 <div class="card-body">
-                  <h5 class="card-title"> {{ user.name }} </h5>
-                  <h6 class="card-subtitle mb-2 text-muted"> {{ user.role }} </h6>
+                  <h5 class="card-title"> {{ user.username }} </h5>
+                  <h6 class="card-subtitle mb-2 text-muted"> {{ user.roles }} </h6>
                   <p class="card-text"> Cras interdum varius finibus. Sed et tempus sem. Duis sit amet vehicula ipsum, vitae condimentum libero. Quisque ut justo imperdiet nulla tristique imperdiet. Fusce ac orci a nibh semper bibendum. </p>
                   <a href="#" class="card-link d-block btn btn-primary mb-2"> Editar </a>
                   <a href="#" class="card-link d-block btn btn-danger ml-0"> Excluir </a>
