--- a/src/app/data-environment/propositions/proposition/proposition.component.html
+++ b/src/app/data-environment/propositions/proposition/proposition.component.html
@@ -16,7 +16,7 @@
                         <th scope="col">&nbsp;</th>
                       </tr>
                     </thead>
-                    <tbody *ngFor="let proposition of propositions"></tbody>
+                    <tbody *ngFor="let proposition of propositions">
                         
                         <tr>
                             <th scope="row"> {{ proposition.id }} </th>
