--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <ng-template #content let-modal>
         <div class="modal-header">
-          <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+          <h4 class="modal-title" id="modal-basic-title">Novo Criterio</h4>
           <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -9,18 +9,27 @@
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <label for="dateOfBirth">Date of birth</label>
-              <div class="input-group">
-                <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+                <label for="description">Nome</label>
+                <input id="description" class="form-control" name="description">
+                <hr />
+                <label for="tag">Sigla</label>
+                <input id="tag" class="form-control" name="tag">
+                <hr />
+                <label for="summary">Resumo</label>
+                <textarea class="form-control" id="summary" rows="3" name="summary"></textarea>
+                <hr />
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" value="" id="selected">
+                  <label class="form-check-label" for="selected">
+                    Replicar Seção
+                  </label>
                 </div>
-              </div>
+              
             </div>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+          <button type="button" class="btn btn-outline-primary" (click)="modal.close('Save click')">Adicionar</button>
         </div>
       </ng-template>
     <button class="btn btn-info mt-2 float-right" (click)="open(content)"> Novo Criterio </button>
