--- a/src/app/organization-environment/organizations/organization-list/organization-list.component.html
+++ b/src/app/organization-environment/organizations/organization-list/organization-list.component.html
@@ -18,11 +18,11 @@
     <tr class="row">
  
           <td style="display:none;"></td>
-          <td class="col-5"><input type="text" name="newDescription" id="newDescription" [value]="newDescription"></td>
+          <td class="col-5"><input type="text" name="newDescription" id="newDescription" [value]="newDescription" #description></td>
           
-          <td class="col-5"><input type="text" name="newSummary" id="newSummary" [value]="newSummary"></td>
+          <td class="col-5"><input type="text" name="newSummary" id="newSummary" [value]="newSummary" #summary></td>
 
-          <td class="col-2"><a (click)="newOrganization()"> <h3>&nbsp;+&nbsp;</h3> </a></td>
+	  <td class="col-2"><button (click)="newOrganization(description.value, summary.value)" class="btn btn-outline-primary btn-select"> <fa name="plus"></fa></button></td>
 
 
       </tr>
