--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -44,7 +44,7 @@
                 {{factor.description}}<br />
                 <span class="text-muted">{{factor.summary}}</span>
             </div>
-            <div class="col-6 col-md-2 mt-2"><a data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </a> </div>
+            <div class="col-6 col-md-2 mt-2"><button class="btn btn-outline-primary" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </button> </div>
             <div class="col-6 col-md-1 mt-2"><button class="btn btn-info" data-toggle="collapse" attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0"> V </button></div>
 
         </div>
@@ -60,9 +60,18 @@
         </div>
         <div class="card col-12 col-md-3 collapse mt-2" id="newSection{{factor.id}}">
             <div class="card-body">
-                <p class="card-text"><input type="text" placeholder="Tag"></p>
-                <p class="card-text"><input type="text" placeholder="Description"></p>
-                <p class="text-muted"><input type="text" placeholder="Summary"></p>
+                <p class="card-text"><input type="text" placeholder="Tag" name="newSectionTag" id="newSectionTag" [(value)]="newSectionTag" #sectionTag></p>
+                <p class="card-text"><input type="text" placeholder="Description" name="newSectionDescription" id="newSectionDescription" [(value)]="newSectionDescription" #sectionDescription></p>
+                <p class="text-muted"><input type="text" placeholder="Summary" name="newSectionSummary" id="newSectionSummary" [(value)]="newSectionSummary" #sectionSummary></p>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" value="" id="newSectionSelected" [(checked)]="newSectionSelected" #sectionSelected>
+                  <label class="form-check-label" for="newSectionSelected">
+                    Replicar
+                  </label>
+                </div>
+                <br /><br />
+                <button type="button" class="btn btn-outline-primary ml-2 mr-1" (click)="newSection(sectionTag.value, sectionDescription.value, sectionSummary.value, sectionSelected.checked, factor)">Adicionar</button>
+                <button type="button" class="btn btn-outline-danger ml-1 mr-1" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Cancelar </button>
             </div>
         </div>
 
