--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -45,7 +45,11 @@
                 <span class="text-muted">{{factor.summary}}</span>
             </div>
             <div class="col-6 col-md-2 mt-2"><button class="btn btn-outline-primary" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </button> </div>
-            <div class="col-6 col-md-1 mt-2"><button class="btn btn-info" data-toggle="collapse" attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0"> V </button></div>
+            <div class="col-6 col-md-1 mt-2">
+              <button class="btn btn-info" data-toggle="collapse" attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0" (click)="toggle()">
+                <fa [name]="visible? 'caret-up': 'caret-down'"></fa>
+              </button>
+            </div>
 
         </div>
         <div class="row collapse" id="sections{{factor.id}}">
