--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -44,13 +44,15 @@
                 {{factor.description}}<br />
                 <span class="text-muted">{{factor.summary}}</span>
             </div>
-            <div class="col-6 col-md-2 mt-2"><button class="btn btn-outline-primary" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </button> </div>
-            <div class="col-6 col-md-1 mt-2">
+            <div class="col-6 col-md-1 mt-2"><button class="btn btn-outline-primary" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova Seção </button> </div>
+            <div class="col-6 col-md-2 mt-2">
               <button class="btn btn-info btn-collapse" data-toggle="collapse" attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0" (click)="toggle()">
                 <fa [name]="visible? 'caret-up' : 'caret-down'"></fa>
               </button>
+              <button class="btn btn-info ml-1" (click)="deleteFactor(factor.id)">
+                <fa name="minus"></fa>
+              </button>
             </div>
-
         </div>
         <div class="row collapse" id="sections{{factor.id}}">
             <div class="card col-12 col-md-3 mt-2" *ngFor="let section of factor.sections">
