--- a/src/app/data-environment/workspace/workspace.component.css
+++ b/src/app/data-environment/workspace/workspace.component.css
@@ -3,3 +3,41 @@
     border-bottom-width: 3px;
     border-bottom-color: red;
   }
+
+  .hover-red {
+    color: #555;
+    transition: 0.3s;
+  }
+
+  .hover-red:hover {
+    color: #FF6677;
+  }
+
+  .factor-item {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-right: 1px solid #555;
+    background-color: #E9E9E9;
+  }
+
+  .factor-tag {
+    background: -webkit-linear-gradient(to right, #EEE,#DDD);  
+    background: -moz-linear-gradient(to right, #EEE,#DDD);  
+    background: -o-linear-gradient(to right, #EEE,#DDD);  
+    background: linear-gradient(to right, #EEE,#DDD);  
+    -webkit-transition: background 1s ease-out;  
+    -moz-transition: background 1s ease-out;  
+    -o-transition: background 1s ease-out;  
+    transition: background 1s ease-out;  
+
+  }
+  .factor-tag:hover {
+    background-image: linear-gradient(to right, #EEE, #BBB);
+  }
+
+  .btn-outline-primary:focus{
+    color: white
+  }
+
+
+
