--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -43,21 +43,24 @@
   <br />
   <span *ngFor="let factor of factors">
     <div class="row mt-3">
-      <div class="col-12 col-md-2 h2">{{factor.tag}}</div>
-      <div class="col-12 col-md-7">
+      <div class="col-12 col-md-2 h2 factor-item d-flex align-items-center factor-tag">{{factor.tag}}</div>
+      <div class="col-12 col-md-7 factor-item ">
         {{factor.description}}<br />
         <span class="text-muted">{{factor.summary}}</span>
       </div>
-      <div class="col-6 col-md-1 mt-2"><button class="btn btn-outline-primary" data-toggle="collapse"
-          attr.data-target="#newSection{{factor.id}}"> Nova Seção </button> </div>
-      <div class="col-6 col-md-2 mt-2">
-        <button class="btn btn-info btn-collapse" data-toggle="collapse" attr.data-target="#sections{{factor.id}}"
-          [disabled]="factor.sections.length == 0" (click)="toggle()">
+      <div class="col-6 col-md-2 d-flex align-items-center">
+        <button class="btn btn-outline-primary" data-toggle="collapse" attr.data-target="#newSection{{factor.id}}"> Nova
+          Seção </button> </div>
+      <div class="col-6 col-md-1 text-center d-flex align-items-center">
+        <button class="btn btn-info btn-collapse float-left mr-3" data-toggle="collapse"
+          attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0" (click)="toggle()">
           <fa [name]="visible? 'caret-up' : 'caret-down'"></fa>
         </button>
-        <button class="btn btn-info ml-1" (click)="deleteFactor(factor.id)">
-          <fa name="minus"></fa>
-        </button>
+        <a class="mx-auto display-4 mt-2 ml-3" (click)="deleteFactor(factor.id)">
+          <h3 class="d-inline-block float-right  hover-red">
+            <fa name="minus"></fa>
+          </h3>
+        </a>
       </div>
     </div>
     <div class="row collapse" id="sections{{factor.id}}">
