adicionado botao de gerenciar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,7 +36,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" (click)="changeProposition()">Trocar Proposição</a>
-              <a class="dropdown-item" href="#">Gerenciar</a>
+              <a class="dropdown-item" [routerLink]="['management']">Gerenciar</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Alguma outra coisa</a>
             </div>
